--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,15 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl= true
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+jwt.secret =[B@5a42bbf4
+
+spring.jackson.serialization.write-dates-as-timestamps=false
+logging.level.org.springframework.web=DEBUG
+
+
+#spring.main.allow-bean-definition-overriding=true
+
 
